Generate new release

--- a/release/book.html
+++ b/release/book.html
@@ -6192,7 +6192,7 @@ CompositeView to avoid leaking refs.</p></div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_security_stub">Security (stub)</h2>
+<h2 id="_security">Security</h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_encoding_data_when_bootstrapping_json_data">Encoding data when bootstrapping JSON data</h3>
@@ -6242,7 +6242,7 @@ that can be parsed and passed along to your app&#8217;s init function.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-02-10 11:50:32 EST
+Last updated 2012-02-10 12:08:48 EST
 </div>
 </div>
 </body>
