--- a/release/security.html
+++ b/release/security.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="master.css" type="text/css" />
-    <title>Security (stub)</title>
+    <title>Security</title>
   </head>
 
   <body>
@@ -30,7 +30,7 @@
     <div class="content">
       <div class="section" lang="en">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
-<a id="_security_stub"></a>Security (stub)</h2></div></div></div>
+<a id="_security"></a>Security</h2></div></div></div>
 <div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_encoding_data_when_bootstrapping_json_data"></a>Encoding data when bootstrapping JSON data</h3></div></div></div>
