--- a/release/toc.html
+++ b/release/toc.html
@@ -52,6 +52,6 @@
 <a href="book.html#_isolated_unit_testing"><b>Isolated unit testing</b></a><br/>
 <a href="book.html#_example_test_driving_a_task_application"><b>Example: Test-driving a Task application</b></a><br/>
 <h3><b>Chapter 8<br/>
-<a href="book.html#_security_stub">Security (stub)</a></b></h3><br/>
+<a href="book.html#_security">Security</a></b></h3><br/>
 <a href="book.html#_encoding_data_when_bootstrapping_json_data"><b>Encoding data when bootstrapping JSON data</b></a><br/>
 <h1 class="centered">* * *</h1></div></body></html>
